# dance-arcade

./: README.md
hardware/: main.c
software/: CMakeLists.txt  README.md
software-native/: .gitignore
software-native/assets/songs/: README.md
software-native/include/: arrow.hpp  engine.hpp  game.hpp  renderer.hpp  song.hpp  utils.hpp
software-native/src/engine/: parser.cpp  scene.cpp
software-native/src/game/: game.cpp
software-native/src/scenes/: home.cpp
software-web/: package.json
software-web/src-tauri/: Cargo.toml  tauri.conf.json
software-web/src-tauri/src/: main.rs
software/include/: engine.hpp  game.hpp  scenes.hpp  song.hpp  utils.hpp
software/src/: main.cpp
software/src/engine/: audio.cpp  engine.cpp  input.cpp  render.cpp  scene.cpp  texture.cpp
software/src/game/: song.cpp
software/src/scenes/: home.cpp  no_scene.cpp  song_select.cpp
software/src/utils/: logger.cpp  transform.cpp
